Update Privacy Policy for v1.2.3 features

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,53 +14,67 @@
             margin: 0;
             padding: 20px;
         }
+
         .container {
             max-width: 800px;
             margin: 0 auto;
             background-color: #fff;
             padding: 30px;
             border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
-        h1, h2, h3 {
+
+        h1,
+        h2,
+        h3 {
             color: #2c3e50;
             border-bottom: 2px solid #3498db;
             padding-bottom: 10px;
         }
+
         h1 {
             text-align: center;
             border-bottom: none;
             padding-bottom: 0;
         }
+
         .header {
             text-align: center;
             margin-bottom: 30px;
         }
+
         .app-name {
             font-size: 2.5em;
             font-weight: bold;
             color: #3498db;
         }
+
         .last-updated {
             color: #7f8c8d;
             font-size: 0.9em;
         }
+
         a {
             color: #3498db;
             text-decoration: none;
         }
+
         a:hover {
             text-decoration: underline;
         }
+
         ul {
             padding-left: 20px;
         }
+
         li {
             margin-bottom: 10px;
         }
+
         .section {
             margin-bottom: 25px;
         }
+
         .footer {
             text-align: center;
             margin-top: 40px;
@@ -68,23 +83,30 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="header">
             <div class="app-name">NoteNext</div>
             <h1>Privacy Policy</h1>
-            <p class="last-updated">Last updated: November 02, 2025</p>
+            <p class="last-updated">Last updated: December 30, 2025</p>
         </div>
 
         <div class="section">
-            <p>Suvojeet Sengupta ("I," "me," or "my") built the NoteNext app as an Open Source app. This Privacy Policy is used to inform you regarding my policies with the collection, use, and disclosure of personal information if anyone decided to use my Service.</p>
-            <p>By using NoteNext, you agree to the collection and use of information in relation to this policy. The information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</p>
+            <p>Suvojeet Sengupta ("I," "me," or "my") built the NoteNext app as an Open Source app. This Privacy Policy
+                is used to inform you regarding my policies with the collection, use, and disclosure of personal
+                information if anyone decided to use my Service.</p>
+            <p>By using NoteNext, you agree to the collection and use of information in relation to this policy. The
+                information that I collect is used for providing and improving the Service. I will not use or share your
+                information with anyone except as described in this Privacy Policy.</p>
         </div>
 
         <div class="section">
             <h2>1. Information Collection and Use</h2>
-            <p>NoteNext is designed with your privacy as a top priority. All of your data, including your notes, checklists, images, and settings, is stored locally on your device and is not uploaded to any external servers.</p>
-            
+            <p>NoteNext is designed with your privacy as a top priority. All of your data, including your notes,
+                checklists, images, and settings, is stored locally on your device and is not uploaded to any external
+                servers.</p>
+
             <h3>a. Information You Provide</h3>
             <p>We collect the content you create and store within the app, which includes:</p>
             <ul>
@@ -99,65 +121,115 @@
             <p>This data resides solely on your device.</p>
 
             <h3>b. Permissions</h3>
-            <p>NoteNext requests certain permissions to enable its features. All permissions are used only for the stated purpose within the app's functionality:</p>
+            <p>NoteNext requests certain permissions to enable its features. All permissions are used only for the
+                stated purpose within the app's functionality:</p>
             <ul>
-                <li><strong>READ_EXTERNAL_STORAGE:</strong> To allow you to attach images and other files from your device's storage to your notes.</li>
-                <li><strong>INTERNET & ACCESS_NETWORK_STATE:</strong> To fetch link previews when you include a URL in your notes and to download Google Fonts for a richer text experience. The app checks for a network connection before attempting to fetch this data.</li>
-                <li><strong>USE_BIOMETRIC:</strong> To enable the App Lock feature, allowing you to secure the app with your fingerprint or other biometric credentials.</li>
-                <li><strong>SCHEDULE_EXACT_ALARM & USE_FULL_SCREEN_INTENT:</strong> To set and display precise reminders that you create for your notes.</li>
+                <li><strong>READ_EXTERNAL_STORAGE / READ_MEDIA_IMAGES:</strong> To allow you to attach images and other
+                    files from your device's storage to your notes.</li>
+                <li><strong>INTERNET & ACCESS_NETWORK_STATE:</strong> To fetch link previews, download Google Fonts, and
+                    perform Google Drive backups (if enabled).</li>
+                <li><strong>USE_BIOMETRIC:</strong> To enable the App Lock feature, allowing you to secure the app with
+                    your fingerprint or other biometric credentials.</li>
+                <li><strong>SCHEDULE_EXACT_ALARM & USE_FULL_SCREEN_INTENT:</strong> To set and display precise reminders
+                    that you create for your notes.</li>
                 <li><strong>POST_NOTIFICATIONS:</strong> To show notifications for your reminders.</li>
+                <li><strong>FOREGROUND_SERVICE & FOREGROUND_SERVICE_DATA_SYNC:</strong> To ensure reliable data backups
+                    to Google Drive, preventing the system from interrupting the upload process during long-running
+                    operations.</li>
             </ul>
         </div>
 
         <div class="section">
             <h2>2. How We Use Your Information</h2>
-            <p>Your information is used exclusively to provide and enhance your experience with NoteNext. This includes:</p>
+            <p>Your information is used exclusively to provide and enhance your experience with NoteNext. This includes:
+            </p>
             <ul>
                 <li>Storing, displaying, and organizing your notes and other content.</li>
                 <li>Enabling features like reminders, app lock, and rich link previews.</li>
                 <li>Personalizing your experience through themes and layout settings.</li>
+                <li><strong>Data Backup:</strong> If you choose to use the Google Drive Backup feature, your data is
+                    securely zipped and uploaded to your personal Google Drive account.</li>
             </ul>
-            <p><strong>All data processing occurs locally on your device.</strong></p>
+            <p><strong>All data processing occurs locally on your device, unless you explicitly choose to backup your
+                    data to Google Drive.</strong></p>
         </div>
 
         <div class="section">
-            <h2>3. Data Sharing and Disclosure</h2>
-            <p>I do not share, sell, rent, or trade your personal information with any third parties. Since all your data is stored locally on your device, I do not have access to it. The only exception is when you voluntarily choose to share a note using the app's "Share" functionality, which uses your device's native sharing capabilities.</p>
+            <h2>3. Google Drive Backup</h2>
+            <p>NoteNext offers an optional feature to backup your notes to Google Drive. If you choose to use this
+                feature:</p>
+            <ul>
+                <li><strong>Authentication:</strong> You will be asked to sign in with your Google account.</li>
+                <li><strong>Restricted Access:</strong> The app requests access <em>only</em> to the files it creates
+                    (using the <code>drive.file</code> and <code>drive.appdata</code> scopes). It cannot read or access
+                    any other files in your Google Drive.</li>
+                <li><strong>Data Handling:</strong> Your notes and attachments are compressed into a standard zip file
+                    and uploaded directly to your Google Drive. We do not have access to this data, nor is it sent to
+                    any third-party servers other than your own Google Drive storage.</li>
+                <li><strong>User Control:</strong> You have full control to link or unlink your account and delete your
+                    backups at any time.</li>
+            </ul>
         </div>
 
         <div class="section">
-            <h2>4. Third-Party Services</h2>
+            <h2>4. Data Sharing and Disclosure</h2>
+            <p>I do not share, sell, rent, or trade your personal information with any third parties. Since all your
+                data is stored locally on your device (or in your personal Google Drive if backup is enabled), I do not
+                have access to it. The only exception is when you voluntary choose to share a note using the app's
+                "Share" functionality.</p>
+        </div>
+
+        <div class="section">
+            <h2>5. Third-Party Services</h2>
             <p>NoteNext uses a few third-party libraries to provide its features:</p>
             <ul>
-                <li><strong>Google Fonts:</strong> To provide a better visual experience, the app may download fonts from Google Fonts. This involves a network request to Google's servers.</li>
-                <li><strong>Jsoup:</strong> To generate rich link previews, the app makes a network request to the URL you provide in a note.</li>
+                <li><strong>Google Drive API:</strong> Used strictly for the optional backup and restore functionality.
+                </li>
+                <li><strong>Google Fonts:</strong> To provide a better visual experience, the app may download fonts
+                    from Google Fonts.</li>
+                <li><strong>Jsoup:</strong> To generate rich link previews, the app makes a network request to the URL
+                    you provide in a note.</li>
             </ul>
-            <p>These services have their own privacy policies, and I encourage you to review them. NoteNext does not send any of your personal note content to these services.</p>
+            <p>These services have their own privacy policies, and I encourage you to review them. NoteNext does not
+                send any of your personal note content to these services (except for the user-initiated Google Drive
+                backup).</p>
         </div>
 
         <div class="section">
-            <h2>5. Data Security, Retention, and Deletion</h2>
-            <p>I value your trust in providing us your Personal Information. I have implemented the following measures to protect it:</p>
+            <h2>6. Data Security, Retention, and Deletion</h2>
+            <p>I value your trust in providing us your Personal Information. I have implemented the following measures
+                to protect it:</p>
             <ul>
-                <li><strong>Local Storage:</strong> All your note data is stored in a private, local database on your device, which is not accessible by other apps.</li>
-                <li><strong>App Lock:</strong> You can enable an additional layer of security by setting up a PIN or using biometric authentication to protect access to the app.</li>
+                <li><strong>Local Storage:</strong> All your note data is stored in a private, local database on your
+                    device.</li>
+                <li><strong>Secure Backup:</strong> Cloud backups are stored in your personal Google Drive, protected by
+                    your Google Account credentials.</li>
+                <li><strong>App Lock:</strong> You can enable an additional layer of security by setting up a PIN or
+                    using biometric authentication to protect access to the app.</li>
             </ul>
-            <p>Your data is retained on your device for as long as you use the app. You can delete notes at any time, which moves them to the Bin. Notes in the Bin are permanently deleted after a user-configurable period (defaulting to 7 days). Uninstalling the app will also delete all of its data from your device.</p>
+            <p>Your data is retained on your device for as long as you use the app. You can delete notes at any time,
+                which moves them to the Bin. Uninstalling the app will also delete all of its local data. You can
+                manually delete your Google Drive backups through the app settings or via Google Drive directly.</p>
         </div>
 
         <div class="section">
             <h2>6. Children’s Privacy</h2>
-            <p>NoteNext does not knowingly collect personally identifiable information from children under 13. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to take necessary actions.</p>
+            <p>NoteNext does not knowingly collect personally identifiable information from children under 13. If you
+                are a parent or guardian and you are aware that your child has provided us with personal information,
+                please contact me so that I will be able to take necessary actions.</p>
         </div>
 
         <div class="section">
             <h2>7. Changes to This Privacy Policy</h2>
-            <p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted.</p>
+            <p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically
+                for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These
+                changes are effective immediately after they are posted.</p>
         </div>
 
         <div class="section">
             <h2>8. Contact Us</h2>
-            <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at <a href="mailto:suvojeetsengupta@zohomail.in">suvojeetsengupta@zohomail.in</a>.</p>
+            <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at <a
+                    href="mailto:suvojeetsengupta@zohomail.in">suvojeetsengupta@zohomail.in</a>.</p>
         </div>
 
         <div class="footer">
@@ -165,4 +237,5 @@
         </div>
     </div>
 </body>
+
 </html>
