Update privacy policy with AI data usage details

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="header">
             <div class="app-name">NoteNext</div>
             <h1>Privacy Policy</h1>
-            <p class="last-updated">Last updated: December 30, 2025</p>
+            <p class="last-updated">Last updated: January 1, 2026</p>
         </div>
 
         <div class="section">
@@ -149,6 +149,8 @@
                 <li>Personalizing your experience through themes and layout settings.</li>
                 <li><strong>Data Backup:</strong> If you choose to use the Google Drive Backup feature, your data is
                     securely zipped and uploaded to your personal Google Drive account.</li>
+                <li><strong>AI Summarization:</strong> If you use the summary feature, your note content is sent to
+                    Groq's API to generate a summary.</li>
             </ul>
             <p><strong>All data processing occurs locally on your device, unless you explicitly choose to backup your
                     data to Google Drive.</strong></p>
@@ -172,7 +174,23 @@
         </div>
 
         <div class="section">
-            <h2>4. Data Sharing and Disclosure</h2>
+            <h2>4. AI Summarization</h2>
+            <p>NoteNext includes an optional AI-powered summarization feature powered by Groq. If you choose to use this
+                feature:</p>
+            <ul>
+                <li><strong>On-Demand:</strong> Data is only sent when you explicitly tap the "Summary" button in a
+                    note.
+                </li>
+                <li><strong>Data Transmission:</strong> The text content of that specific note is sent to Groq's API for
+                    processing.</li>
+                <li><strong>Privacy:</strong> Please review <a href="https://groq.com/privacy" target="_blank">Groq's
+                        Privacy Policy</a> to understand how they handle data. NoteNext does not store any response
+                    permanently beyond what is displayed to you.</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>5. Data Sharing and Disclosure</h2>
             <p>I do not share, sell, rent, or trade your personal information with any third parties. Since all your
                 data is stored locally on your device (or in your personal Google Drive if backup is enabled), I do not
                 have access to it. The only exception is when you voluntary choose to share a note using the app's
@@ -180,7 +198,7 @@
         </div>
 
         <div class="section">
-            <h2>5. Third-Party Services</h2>
+            <h2>6. Third-Party Services</h2>
             <p>NoteNext uses a few third-party libraries to provide its features:</p>
             <ul>
                 <li><strong>Google Drive API:</strong> Used strictly for the optional backup and restore functionality.
@@ -189,6 +207,7 @@
                     from Google Fonts.</li>
                 <li><strong>Jsoup:</strong> To generate rich link previews, the app makes a network request to the URL
                     you provide in a note.</li>
+                <li><strong>Groq:</strong> Used to provide AI-powered note summaries.</li>
             </ul>
             <p>These services have their own privacy policies, and I encourage you to review them. NoteNext does not
                 send any of your personal note content to these services (except for the user-initiated Google Drive
@@ -196,7 +215,7 @@
         </div>
 
         <div class="section">
-            <h2>6. Data Security, Retention, and Deletion</h2>
+            <h2>7. Data Security, Retention, and Deletion</h2>
             <p>I value your trust in providing us your Personal Information. I have implemented the following measures
                 to protect it:</p>
             <ul>
@@ -213,21 +232,21 @@
         </div>
 
         <div class="section">
-            <h2>7. Children’s Privacy</h2>
+            <h2>8. Children’s Privacy</h2>
             <p>NoteNext does not knowingly collect personally identifiable information from children under 13. If you
                 are a parent or guardian and you are aware that your child has provided us with personal information,
                 please contact me so that I will be able to take necessary actions.</p>
         </div>
 
         <div class="section">
-            <h2>8. Changes to This Privacy Policy</h2>
+            <h2>9. Changes to This Privacy Policy</h2>
             <p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically
                 for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These
                 changes are effective immediately after they are posted.</p>
         </div>
 
         <div class="section">
-            <h2>9. Contact Us</h2>
+            <h2>10. Contact Us</h2>
             <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at <a
                     href="mailto:suvojeetsengupta@zohomail.in">suvojeetsengupta@zohomail.in</a>.</p>
         </div>
