Update privacy policy with AES-256 encryption disclosure

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
                 <li><strong>Data Handling:</strong> Your notes and attachments are compressed into a standard zip file
                     and uploaded directly to your Google Drive. We do not have access to this data, nor is it sent to
                     any third-party servers other than your own Google Drive storage.</li>
+                <li><strong>Encryption:</strong> You have the option to encrypt your backups with a password. If
+                    enabled,
+                    your backup data is encrypted using <strong>AES-256 encryption</strong> before being uploaded.</li>
                 <li><strong>User Control:</strong> You have full control to link or unlink your account and delete your
                     backups at any time.</li>
             </ul>
@@ -222,7 +225,7 @@
                 <li><strong>Local Storage:</strong> All your note data is stored in a private, local database on your
                     device.</li>
                 <li><strong>Secure Backup:</strong> Cloud backups are stored in your personal Google Drive, protected by
-                    your Google Account credentials.</li>
+                    your Google Account credentials. Optional AES-256 encryption adds an extra layer of security.</li>
                 <li><strong>App Lock:</strong> You can enable an additional layer of security by setting up a PIN or
                     using biometric authentication to protect access to the app.</li>
             </ul>
