docs: Update Privacy Policy for Jan 3 2026 release

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="header">
             <div class="app-name">NoteNext</div>
             <h1>Privacy Policy</h1>
-            <p class="last-updated">Last updated: January 1, 2026</p>
+            <p class="last-updated">Last updated: January 3, 2026</p>
         </div>
 
         <div class="section">
@@ -206,6 +206,7 @@
             <ul>
                 <li><strong>Google Drive API:</strong> Used strictly for the optional backup and restore functionality.
                 </li>
+                <li><strong>Google Play Services:</strong> Used to check for app updates directly from the Play Store.</li>
                 <li><strong>Google Fonts:</strong> To provide a better visual experience, the app may download fonts
                     from Google Fonts.</li>
                 <li><strong>Jsoup:</strong> To generate rich link previews, the app makes a network request to the URL
